# Threat2Traffic

./: README.md  pyproject.toml
Task1/: .env.example  cli.py  config.py  orchestrator.py
Task1/agents/: base_agent.py  behavior_agent.py  prompts.py  static_agent.py  threat_intel_agent.py
Task1/argumentation/: grounded_extension.py  models.py  preference.py
Task1/deliberation/: conflict_detector.py  coordinator.py  models.py
Task1/evidence_graph/: graph.py  invariants.py  models.py
Task1/spec_extractor/: extractor.py  mitre_mapper.py  models.py
Task1/utils/: llm_client.py  logger.py
Task1/vt_client/: client.py  parser.py
Task2/: .env.example  cli.py  config.py  models.py  orchestrator.py
Task2/generator/: prompts.py  script_generator.py  terraform_generator.py
Task2/providers/: base_provider.py  libvirt.py  qemu.py  tencentcloud.py
Task2/refinement/: feedback_parser.py  refiner.py
Task2/schema/: compiler.py  prompt_builder.py  registry.py
Task2/validators/: semantic_validator.py  syntax_validator.py
pcap/adware/: 1.pcap  10.pcap  100.pcap  101.pcap  103.pcap  104.pcap  105.pcap  106.pcap  107.pcap  108.pcap  109.pcap  11.pcap  110.pcap  111.pcap  112.pcap  113.pcap  114.pcap  115.pcap  116.pcap  117.pcap  118.pcap  119.pcap  12.pcap  120.pcap  121.pcap  122.pcap  123.pcap  124.pcap  125.pcap  126.pcap  127.pcap  128.pcap  129.pcap  13.pcap  130.pcap  131.pcap  132.pcap  133.pcap  134.pcap  135.pcap  (+133 more)
pcap/coinminer/: 1.pcap  10.pcap  100.pcap  101.pcap  102.pcap  103.pcap  104.pcap  105.pcap  106.pcap  107.pcap  108.pcap  109.pcap  11.pcap  (+226 more)
(+1101 files in other folders)
